public game pages done

--- a/retrotrack.web/css/components/publicGamesTable.module.scss
+++ b/retrotrack.web/css/components/publicGamesTable.module.scss
@@ -2,6 +2,9 @@
     background-color: light-dark(var(--mantine-color-light-5),(var(--mantine-color-dark-7)));
     border-radius: 5px;
     border: 2px solid #1590e2;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .roundedImage {
