--- a/retrotrack.web/css/components/gameModal.module.scss
+++ b/retrotrack.web/css/components/gameModal.module.scss
@@ -38,10 +38,21 @@
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
+  background-color: light-dark(var(--mantine-color-light-5),(var(--mantine-color-dark-7)));
 }
 
 .achievementIconTypeBox {
   position: absolute;
   bottom: 8;
   right: 8;
+}
+
+.footer {
+  position: sticky;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  z-index: 1000;
 }
