--- a/retrotrack.web/css/components/navbar.module.scss
+++ b/retrotrack.web/css/components/navbar.module.scss
@@ -7,3 +7,8 @@
   background-color: light-dark(var(--mantine-color-light-4),(var(--mantine-color-dark-5)));
   border: '1px solid #2e3b4e';
 }
+
+.profileBox {
+  background-color: light-dark(var(--mantine-color-light-4), #38465f);
+  border-radius: 10px;
+}
