--- a/retrotrack.web/css/components/gameModal.module.scss
+++ b/retrotrack.web/css/components/gameModal.module.scss
@@ -14,7 +14,7 @@
 .gameScreenshot {
   width: 100%;
   height: 240px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .gameCoverBox {
@@ -56,8 +56,8 @@
 
 .achievementIconTypeBox {
   position: absolute;
-  bottom: 8;
-  right: 8;
+  bottom: 8px;
+  right: 8px;
 }
 
 .footer {
