random error fix

--- a/retrotrack.web/css/pages/profile.module.scss
+++ b/retrotrack.web/css/pages/profile.module.scss
@@ -1,9 +1,10 @@
 .wallIcon {
   width: 64px;
   height: 64px;
+  border-radius: 8px;
 }
 
-.lastPlayedIcon {
+.lastPlayedIcon { 
   width: 48px;
   height: 48px;
   border-radius: 8px;
